--- a/LibraryProject/Content/Site.css
+++ b/LibraryProject/Content/Site.css
@@ -15,4 +15,30 @@ select,
 textarea {
     max-width: 280px;
 }
+#button {
+        text-decoration: none;
+        text-align: center;
+        padding: 5px 10px;
+        margin: 2px;
+        border: solid 1px #87c48c;
+        border-radius: 10px;
+        font: 14px Verdana, Geneva, sans-serif;
+        font-weight: bold;
+        color: #808080;
+        background-color: #87c48c;
+    }
 
+#button:hover {
+                border: solid 1px;
+                background-color: #60d76a;
+                color: #4f4d4d;
+    }
+    
+#button:active { 
+                border: solid 1px #88ff9a; 
+                box-shadow: 0px 0px 25px #20ce5e;                                    
+                font: 14px Verdana, Geneva, sans-serif;
+                font-weight: bold;
+                color: #2b2929;
+                background-color: #88ff9a;
+    }
