--- a/LibraryProject/Views/Shared/_Layout.cshtml
+++ b/LibraryProject/Views/Shared/_Layout.cshtml
@@ -1,14 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <script src="~/scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/scripts/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container body-content">
         @RenderBody()       
     </div>
+    @Scripts.Render("~/bundles/buttonHandler")
 </body>
 </html>
