Added IndexModel Added partial Views for each entities Added Publisher property Added Selection by Publisher Added Extention metods Added saving to xml

--- a/LibraryProject/Views/Shared/_Layout.cshtml
+++ b/LibraryProject/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <script src="~/scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/scripts/bootstrap.min.js"></script>
+    @*<script src="~/scripts/bootstrap.min.js"></script>*@
 </head>
 <body>
     <div class="container body-content">
