--- a/LibraryProject/Content/Site.css
+++ b/LibraryProject/Content/Site.css
@@ -10,31 +10,31 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,*/
 select,
 textarea {
     max-width: 280px;
 }
-#button {
+.button {
         text-decoration: none;
         text-align: center;
-        padding: 5px 10px;
+        padding: 2px 10px;
         margin: 2px;
         border: solid 1px #87c48c;
         border-radius: 10px;
-        font: 14px Verdana, Geneva, sans-serif;
+        font: 12px Verdana, Geneva, sans-serif;
         font-weight: bold;
         color: #808080;
         background-color: #87c48c;
     }
 
-#button:hover {
+.button:hover {
                 border: solid 1px;
                 background-color: #60d76a;
                 color: #4f4d4d;
     }
     
-#button:active { 
+.button:active { 
                 border: solid 1px #88ff9a; 
                 box-shadow: 0px 0px 25px #20ce5e;                                    
                 font: 14px Verdana, Geneva, sans-serif;
