--- a/LibraryProject/Views/Home/Index.cshtml
+++ b/LibraryProject/Views/Home/Index.cshtml
@@ -1,89 +1,15 @@
 ﻿@using LibraryProject.Models;
-@using LibraryProject.Interfaces;
+@model IndexModel
 
-@model List<PrintEdition>
 @{
     ViewBag.Title = "Library";
 }
 
-<h3>List of books</h3>
-<table>
-    <thead>
-        <tr>
-            <th align="left">Name</th>
-            <th align="left">Author</th>
-            <th align="left">Publisher</th>
-            <th align="left">Price</th>
-        </tr>
-    </thead>
-    <tbody>        
-        @foreach (var item in Model)
-        {
-            if (item is IBookAble)
-            {
-                var book = (IBookAble)item;
-            <tr>
-                <td align="left">@book.Name</td>
-                <td align="left">@book.Author</td>
-                <td align="left">@book.Publisher</td>
-                <td align="center">@book.Price.ToString("c")</td>
-            </tr>
-            }
-        }
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="3" align="left"><p>@Html.ActionLink("Save a List of books", "GetList",new { },new { id = "button"})</p></td>
-        </tr>
-    </tfoot>
-</table>
+<h4>ListOfBooks</h4>
+@Html.Partial("BookPartial",Model.Books)
 
-<h3>List of magazines</h3>
-<table>
-    <thead>
-        <tr>
-            <th align="left">Name</th>
-            <th align="left">Category</th>
-            <th align="left">Price</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            if (item is IMagazineAble)
-            {
-                var magazine = (IMagazineAble)item;
-                <tr>
-                    <td align="left">@magazine.Name</td>
-                    <td align="left">@magazine.Category</td>
-                    <td align="center">@magazine.Price.ToString("c")</td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
+<h4>ListOfMagazines</h4>
+@Html.Partial("MagazinePartial", Model.Magazines)
 
-<h3>List of News paper</h3>
-<table>
-        <thead>
-            <tr>
-                <th align="left">Name</th>
-                <th align="left">Category</th>
-                <th align="left">Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                if (item is INewspaperAble)
-                {
-                    var newsPaper = (INewspaperAble)item;
-                    <tr>
-                        <td align="left">@newsPaper.Name</td>
-                        <td align="left">@newsPaper.Category</td>
-                        <td align="center">@newsPaper.Price.ToString("c")</td>
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
+<h4>ListOfNewsPaper</h4>
+@Html.Partial("NewsPaperPartial", Model.NewsPapers)
