--- a/LibraryProject/Views/Home/BookPartial.cshtml
+++ b/LibraryProject/Views/Home/BookPartial.cshtml
@@ -15,6 +15,9 @@
         <th align="left">
             Price
         </th>
+        <th align="left">
+            Action
+        </th>
     </tr>
     @foreach (var item in Model)
     {
@@ -31,6 +34,11 @@
             <td align="left">
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
+            <td align="left">
+                @Html.ActionLink("Edit book","EditBook", new { id = item.Id })
+                @Html.ActionLink("Show", "ShowBook", new { id = item.Id })
+                @Html.ActionLink("Delete","DeleteBook", new { id = item.Id })                
+            </td>
         </tr>
     }
     <tr>
@@ -41,6 +49,9 @@
     </tr>
 </table>
 
+<p>
+    @Html.ActionLink("Create New","CreateBook")
+</p>
 
 <div>
     @using (Html.BeginForm())
