--- a/LibraryProject/Views/Home/MagazinePartial.cshtml
+++ b/LibraryProject/Views/Home/MagazinePartial.cshtml
@@ -15,6 +15,9 @@
         <th align="left">
             Price
         </th>
+        <th align="left">
+            Action
+        </th>
     </tr>
     @foreach (var item in Model)
     {
@@ -31,9 +34,19 @@
             <td align="left">
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
+            <td align="left">
+                @Html.ActionLink("Edit magazine", "EditMagazine", new { id = item.Id })
+                @Html.ActionLink("Show", "ShowMagazine", new { id = item.Id })
+                @Html.ActionLink("Delete", "DeleteMagazine", new { id = item.Id })
+            </td>
         </tr>
     }
 </table>
+
+<p>
+    @Html.ActionLink("Create New", "CreateMagazine")
+</p>
+
 <div>
     @using (Html.BeginForm())
     {
