--- a/LibraryProject/Views/Home/NewsPaperPartial.cshtml
+++ b/LibraryProject/Views/Home/NewsPaperPartial.cshtml
@@ -15,6 +15,9 @@
         <th align="left">
             Price
         </th>
+        <th align="left">
+            Action
+        </th>
     </tr>
     @foreach (var item in Model)
     {
@@ -31,6 +34,11 @@
             <td align="left">
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
+            <td align="left">
+                @Html.ActionLink("Edit newspaper", "EditNewspaper", new { id = item.Id })
+                @Html.ActionLink("Show", "ShowNewspaper", new { id = item.Id })
+                @Html.ActionLink("Delete", "DeleteNewspaper", new { id = item.Id })
+            </td>
         </tr>
     }
     <tr>
@@ -39,7 +47,9 @@
         </td>
     </tr>
 </table>
-
+<p>
+    @Html.ActionLink("Create New", "CreateNewspaper")
+</p>
 
 <div>
     @using (Html.BeginForm())
