--- a/LibraryProject/Views/Home/ShowBook.cshtml
+++ b/LibraryProject/Views/Home/ShowBook.cshtml
@@ -28,5 +28,5 @@
 </table>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Home", new { }, new { @class = "button" })
 </div>
