--- a/LibraryProject/Views/Home/BookPartial.cshtml
+++ b/LibraryProject/Views/Home/BookPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using LibraryProject.Models;
 @model List<Book>
 
+<div id="popUp-request"></div>
+
 <table class="table">
     <tr>
         <th align="left">
@@ -37,7 +39,7 @@
             <td align="left">
                 @Html.ActionLink("Edit book","EditBook", new { id = item.Id })
                 @Html.ActionLink("Show", "ShowBook", new { id = item.Id })
-                @Html.ActionLink("Delete","DeleteBook", new { id = item.Id })                
+                @Html.ActionLink("Delete", "DeleteBook", "Home", new { id = item.Id }, new { @class = "viewDialog", data_dialog_title = "Model delete"})              
             </td>
         </tr>
     }
@@ -50,7 +52,7 @@
 </table>
 
 <p>
-    @Html.ActionLink("Create New","CreateBook")
+    @Html.ActionLink("Create New","CreateBook", "Home", new { }, new { @class = "button" })
 </p>
 
 <div>
