--- a/LibraryProject/Views/Home/DeleteBook.cshtml
+++ b/LibraryProject/Views/Home/DeleteBook.cshtml
@@ -1,5 +1,4 @@
 ﻿@model LibraryProject.Models.Book
-
 @{
     ViewBag.Title = "DeleteBook";
 }
@@ -7,20 +6,15 @@
 
 <h4>Are you sure you want to delete this?</h4>
 
+<div>
+    <p>@Html.DisplayFor(model => model.Name)</p>
+    <p>@Html.DisplayFor(model => model.Author)</p>
+    <p>@Html.DisplayFor(model => model.Publisher)</p>
+    <p>@Html.DisplayFor(model => model.Price)</p>
+
     @using (Html.BeginForm())
     {
-        @Html.LabelFor(model => model.Name)
-        @Html.DisplayFor(model => model.Name)
-        @Html.LabelFor(model => model.Author)
-        @Html.DisplayFor(model => model.Author)
-        @Html.LabelFor(model => model.Publisher)
-        @Html.DisplayFor(model => model.Publisher)
-        @Html.LabelFor(model => model.Price)
-        @Html.DisplayFor(model => model.Price)
-
-        <input type="submit" value="Delete" />
-        
+        <input type="submit" value="YES" class="button" />
+        @Html.ActionLink("NO", "Index", "Home", new { @class = "button" });
     }
-    <div>
-        @Html.ActionLink("Back to List", "Index");
 </div>
