--- a/LibraryProject/Views/Home/DeleteNewspaper.cshtml
+++ b/LibraryProject/Views/Home/DeleteNewspaper.cshtml
@@ -1,26 +1,20 @@
 ﻿@model LibraryProject.Models.NewsPaper
-
 @{
     ViewBag.Title = "DeleteNewspaper";
 }
-
 <h3>DeleteNewspaper</h3>
 
 <h4>Are you sure you want to delete this?</h4>
 
-@using (Html.BeginForm())
-{
-    @Html.LabelFor(model => model.Name)
-    @Html.DisplayFor(model => model.Name)
-    @Html.LabelFor(model => model.Category)
-    @Html.DisplayFor(model => model.Category)
-    @Html.LabelFor(model => model.Publisher)
-    @Html.DisplayFor(model => model.Publisher)
-    @Html.LabelFor(model => model.Price)
-    @Html.DisplayFor(model => model.Price)
-
-    <input type="submit" value="Delete" />
-}
 <div>
-    @Html.ActionLink("Back to List", "Index");
+    <p>@Html.DisplayFor(model => model.Name)</p>
+    <p>@Html.DisplayFor(model => model.Category)</p>
+    <p>@Html.DisplayFor(model => model.Publisher)</p>
+    <p>@Html.DisplayFor(model => model.Price)</p>
+
+    @using (Html.BeginForm())
+    {
+        <input type="submit" value="YES" class="button" />
+        @Html.ActionLink("NO", "Index", "Home", new { @class = "button" });
+    }
 </div>
