--- a/LibraryProject/Views/Home/EditMagazine.cshtml
+++ b/LibraryProject/Views/Home/EditMagazine.cshtml
@@ -17,9 +17,9 @@
     @Html.LabelFor(model => model.Price)
     @Html.EditorFor(model => model.Price)
     @Html.HiddenFor(model => model.Id)
-    <input type="submit" value="Save">
+    <input type="submit" class="button" value="Save">
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Home", new { }, new { @class = "button" })
 </div>
