--- a/LibraryProject/Views/Shared/_Layout.cshtml
+++ b/LibraryProject/Views/Shared/_Layout.cshtml
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <script src="~/scripts/jquery-1.10.2.min.js"></script>
+    <link href='@Url.Content("~/Content/themes/base/jquery-ui.css")' rel="stylesheet" type="text/css" />
+    <script src="~/scripts/jquery-1.10.2.min.js"></script>  
     @*<script src="~/scripts/bootstrap.min.js"></script>*@
 </head>
 <body>
     <div class="container body-content">
         @RenderBody()       
     </div>
+    <script src='@Url.Content("~/Scripts/jquery-1.12.4.min.js")' type="text/javascript"></script>
+    <script src='@Url.Content("~/Scripts/jquery-ui-1.12.1.min.js")' type="text/javascript"></script>
     @Scripts.Render("~/bundles/buttonHandler")
 </body>
 </html>
