Deleted SaveServices, extented extentions classes Added save func to txt/xml for books/magazines/newspapers

--- a/LibraryProject/Views/Home/MagazinePartial.cshtml
+++ b/LibraryProject/Views/Home/MagazinePartial.cshtml
@@ -41,6 +41,12 @@
             </td>
         </tr>
     }
+    <tr>
+        <td align="left">
+            @Html.ActionLink("Save txt list", "GetMagazinesList", new { }, new { @class = "button button-saver" })
+            @Html.ActionLink("Save xml list", "GetMagazinesXmlList", new { }, new { @class = "button button-saver" })
+        </td>
+    </tr>
 </table>
 
 <p>
