--- a/LibraryProject/Views/Home/NewsPaperPartial.cshtml
+++ b/LibraryProject/Views/Home/NewsPaperPartial.cshtml
@@ -44,7 +44,8 @@
     <tr>
         <td align="left">
             @Html.ActionLink("Save txt list", "GetNewsPapersList", new { }, new { @class = "button button-saver" })
-        </td>
+            @Html.ActionLink("Save xml list", "GetNewspapersXmlList", new { }, new { @class = "button button-saver" })
+         </td>
     </tr>
 </table>
 <p>
