--- a/LibraryProject/Views/Home/BookPartial.cshtml
+++ b/LibraryProject/Views/Home/BookPartial.cshtml
@@ -46,7 +46,7 @@
     <tr>
         <td align="left">
             @Html.ActionLink("Save txt list", "GetBooksList", new { }, new { @class = "button button-saver" })
-            @Html.ActionLink("Save xml list", "GetBookXmlList", new { }, new { @class = "button button-saver" })
+            @Html.ActionLink("Save xml list", "GetBooksXmlList", new { }, new { @class = "button button-saver" })
         </td>
     </tr>
 </table>
